[gd_scene load_steps=4 format=3 uid="uid://cwv4ic558ayun"]

[ext_resource type="AudioStream" uid="uid://chknkfu4c0gsp" path="res://Assets/Audio/BGM/Overworld.mp3" id="1_6s2eu"]
[ext_resource type="Script" uid="uid://db0uolj5jvlca" path="res://Scripts/Classes/Singletons/AudioManager.gd" id="1_gwo7i"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="3_yp3lf"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_gwo7i")

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("1_6s2eu")
bus = &"Music"
parameters/looping = true

[node name="MusicOverride" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="ResourceSetterNew" type="Node" parent="."]
script = ExtResource("3_yp3lf")
mode = 3
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"
