[gd_scene load_steps=37 format=3 uid="uid://bbrkol4k3yobq"]

[ext_resource type="Script" uid="uid://b43onpjaw542l" path="res://Scripts/Classes/Entities/Enemies/RaceBoo.gd" id="1_d640j"]
[ext_resource type="Texture2D" uid="uid://c3l6ynlufxcfp" path="res://Assets/Sprites/Enemies/Boo.png" id="2_5odtl"]
[ext_resource type="Script" uid="uid://caq1qiwmy0mox" path="res://Scripts/Parts/BetterAnimatedSprite.gd" id="3_4ikdy"]
[ext_resource type="Texture2D" uid="uid://dtemc0qgag20j" path="res://Assets/Sprites/UI/BooIcon.png" id="3_5odtl"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="4_6dgmd"]
[ext_resource type="JSON" path="res://Assets/Sprites/Enemies/RaceBoo.json" id="5_6dgmd"]
[ext_resource type="Texture2D" uid="uid://sgrcmlktp2dk" path="res://Assets/Sprites/Particles/SRankParticles.png" id="6_6dgmd"]
[ext_resource type="Script" uid="uid://364rywt44hy6" path="res://Scripts/Classes/UI/PackSprite.gd" id="7_sfl3g"]
[ext_resource type="Script" uid="uid://cq6f682453q6o" path="res://Scripts/Classes/Components/ResourceSetter.gd" id="9_xux50"]
[ext_resource type="Texture2D" uid="uid://cr6iro3hmjl7f" path="res://Assets/Sprites/Particles/GoldParticles.png" id="10_4hd5m"]
[ext_resource type="Script" uid="uid://cmvlgsjmsk0v5" path="res://Scripts/Classes/Resources/ThemedResource.gd" id="11_kx23c"]
[ext_resource type="Texture2D" uid="uid://dboi14xptkew3" path="res://Assets/Sprites/UI/BooWarning.png" id="12_4hd5m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mm3k3"]
atlas = ExtResource("2_5odtl")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk4wu"]
atlas = ExtResource("2_5odtl")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ede5m"]
atlas = ExtResource("2_5odtl")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pinst"]
atlas = ExtResource("2_5odtl")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5tsp"]
atlas = ExtResource("2_5odtl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8pl"]
atlas = ExtResource("2_5odtl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrwk8"]
atlas = ExtResource("2_5odtl")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwe35"]
atlas = ExtResource("2_5odtl")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7l5x"]
atlas = ExtResource("2_5odtl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7k1s"]
atlas = ExtResource("2_5odtl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f71ce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm3k3")
}],
"loop": true,
"name": &"BlackIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk4wu")
}],
"loop": true,
"name": &"BlackMove",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ede5m")
}],
"loop": true,
"name": &"GoldIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pinst")
}],
"loop": true,
"name": &"GoldMove",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5tsp")
}],
"loop": true,
"name": &"GreenIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8pl")
}],
"loop": true,
"name": &"GreenMove",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrwk8")
}],
"loop": true,
"name": &"RedIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwe35")
}],
"loop": true,
"name": &"RedMove",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7l5x")
}],
"loop": true,
"name": &"WhiteIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7k1s")
}],
"loop": true,
"name": &"WhiteMove",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cst5p"]
resource_name = "Bob"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_m7tca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ikdy"]
_data = {
&"Bob": SubResource("Animation_cst5p"),
&"RESET": SubResource("Animation_m7tca")
}

[sub_resource type="Animation" id="Animation_5odtl"]
resource_name = "CloseFlash"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6dgmd"]
resource_name = "Fine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ikdy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfl3g"]
_data = {
&"CloseFlash": SubResource("Animation_5odtl"),
&"Fine": SubResource("Animation_6dgmd"),
&"RESET": SubResource("Animation_4ikdy")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sfl3g"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f71ce"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 8.0
emission_ring_radius = 10.0
emission_ring_inner_radius = 8.0
emission_ring_cone_angle = 90.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 2.0
anim_speed_max = 2.0

[sub_resource type="Resource" id="Resource_2ic4s"]
script = ExtResource("11_kx23c")
Overworld = ExtResource("10_4hd5m")
metadata/_custom_type_script = "uid://cmvlgsjmsk0v5"

[sub_resource type="Animation" id="Animation_kx23c"]
resource_name = "Blink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2ic4s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_it5le"]
_data = {
&"Blink": SubResource("Animation_kx23c"),
&"RESET": SubResource("Animation_2ic4s")
}

[node name="RaceBoo" type="Node2D" groups=["Enemies"]]
physics_interpolation_mode = 2
script = ExtResource("1_d640j")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_f71ce")
animation = &"BlackIdle"
flip_h = true
script = ExtResource("3_4ikdy")
metadata/_custom_type_script = "uid://caq1qiwmy0mox"

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_4ikdy")
}
autoplay = "Bob"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Sprite"]

[node name="ResourceSetterNew" type="Node" parent="Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("4_6dgmd")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("5_6dgmd")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Sprite"]
remote_path = NodePath("../../GoldParticles")

[node name="OffScreenIcon" type="Sprite2D" parent="."]
physics_interpolation_mode = 2
visible = false
top_level = true
visibility_layer = 2
texture = ExtResource("3_5odtl")
hframes = 5
region_rect = Rect2(0, 0, 16, 16)
script = ExtResource("7_sfl3g")
metadata/_custom_type_script = "uid://364rywt44hy6"

[node name="Animation" type="AnimationPlayer" parent="OffScreenIcon"]
libraries = {
&"": SubResource("AnimationLibrary_sfl3g")
}

[node name="GoldParticles" type="GPUParticles2D" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_sfl3g")
position = Vector2(0, -16)
texture = ExtResource("6_6dgmd")
randomness = 0.12
process_material = SubResource("ParticleProcessMaterial_f71ce")

[node name="ResourceSetter" type="Node" parent="GoldParticles" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("9_xux50")
node_to_affect = NodePath("..")
property_name = "texture"
themed_resource = SubResource("Resource_2ic4s")
metadata/_custom_type_script = "uid://cq6f682453q6o"

[node name="Warning" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="Warning"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -34.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("12_4hd5m")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Warning"]
libraries = {
&"": SubResource("AnimationLibrary_it5le")
}
autoplay = "Blink"
speed_scale = 1.5
